RESOLVED FIXED267283
[WebGPU] api,validation,capability_checks,* is failing
https://bugs.webkit.org/show_bug.cgi?id=267283
Summary [WebGPU] api,validation,capability_checks,* is failing
Mike Wyrzykowski
Reported 2024-01-09 10:49:17 PST
[WebGPU] api,validation,capability_checks,* is failing
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-09 10:49:34 PST
Mike Wyrzykowski
Comment 2 2024-01-30 16:33:28 PST
EWS
Comment 3 2024-02-08 02:03:46 PST
Committed 274277@main (91ff64157ab7): <https://commits.webkit.org/274277@main> Reviewed commits have been landed. Closing PR #23544 and removing active labels.
Diego Pino
Comment 4 2024-02-08 06:57:37 PST
This commit broke the build for GTK-Linux-64-bit-Release-Debian-Stable-Build bot: https://build.webkit.org/#/builders/46/builds/37293/steps/9/logs/stdio Error message: ``` ../../../Source/WebCore/Modules/WebGPU/GPUDevice.cpp:165:11: error: expected nested-name-specifier before ‘enum’ 165 | using enum GPUTextureFormat; | ^~~~ ``` This bot builds with GCC 10.2 and likely this C++-20 feature (using enum) is not fully supported by this version of the compiler.
Diego Pino
Comment 5 2024-02-08 07:00:49 PST
EWS
Comment 6 2024-02-08 07:11:36 PST
Committed 274285@main (ed1f614fe8d1): <https://commits.webkit.org/274285@main> Reviewed commits have been landed. Closing PR #24067 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.