[GCC] Unreviewed, build fix for Debian Stable after 274277@main https://bugs.webkit.org/show_bug.cgi?id=267283

GCC10.2 doesn't fully support "using enum".

* Source/WebCore/Modules/WebGPU/GPUDevice.cpp:
(WebCore::GPUDevice::isSupportedFormat const):

Canonical link: https://commits.webkit.org/274285@main